[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
reqwest = "0.11.23"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
